# cybersec-system

./: .env  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  generate_test_logs.sh  main.py  pyproject.toml
alembic/: env.py
app/: deps.py
app/admin/: __init__.py  auth_backend.py  event_log_admin.py  incident_admin.py  incident_recommendation_admin.py  reaction_rule_admin.py  recommendation_admin.py  severity_level_admin.py  user_admin.py
app/core/: auth.py  config.py  database.py  logger.py  telegram.py
app/models/: __init__.py  base.py  event.py  event_category.py  event_incedent_detail.py  event_log.py  event_source.py  incident.py  incident_detail.py  incident_recommendation.py  reaction_rule.py  recommendation.py  severity_level.py  user.py
app/routers/: __init__.py  auth.py  events.py  incidents.py  ingest.py  recommendations.py  reports.py
app/schemas/: __init__.py  event.py  incident.py  ingest.py  recommendation.py
app/services/: __init__.py  event_service.py  incident_service.py  ingest_service.py  reaction_engine.py  recommendation_service.py  report_service.py
loki/: local-config.yml  loki-config.yaml
loki/rules/fake/: anomaly.yaml  auth.yaml  config.yaml  files.yaml  privilege.yaml
promtail/: promtail-config.yaml
ptomtail/: promtail-config.yml
scripts/: initial_data.py
templates/sqladmin/: custom_list.html
