[project]
name = "cybersec-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.1",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "passlib>=1.7.4",
    "psycopg[binary]>=3.2.9",
    "pydantic-settings>=2.9.1",
    "python-jose>=3.5.0",
    "sqladmin>=0.20.1",
    "sqlalchemy>=2.0.41",
]
